src/objects/System_Performance_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Enphase_kWh__c</fullName>
        <label>Enphase (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installed_System_Name__c</fullName>
        <label>Installed System Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed System</label>
        <referenceTo>Installed_System__c</referenceTo>
        <relationshipLabel>System Performance Snapshots</relationshipLabel>
        <relationshipName>System_Performance_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <formula>IF (AND ( Performance__c &gt;= 0.95, Performance__c &lt;= 1.05 ), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outperforming__c</fullName>
        <formula>IF (Performance__c &gt; 1.05, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outperforming</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance__c</fullName>
        <formula>Enphase_kWh__c /  Production_Guarantee_kWh__c</formula>
        <label>Performance (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Production_Guarantee_kWh__c</fullName>
        <label>Production Guarantee (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Underperforming__c</fullName>
        <formula>IF (Performance__c &lt;  0.95, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Underperforming</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>System Performance Snapshot</label>
    <nameField>
        <displayFormat>PERF-{000000}</displayFormat>
        <label>Snapshot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Performance Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>